add status link

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -98,6 +98,9 @@
         <li class="nav-item">
           <a class="nav-link" href="mailto:feedback@rdap.org">Feedback</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" target="_new" href="https://updown.io/p/ephf0">Status</a>
+        </li>
       </ul>
     </div>
   </nav>
