--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -93,7 +93,7 @@
           <a class="nav-link" href="https://validator.rdap.org">Validator</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/rdap-org">GitHub</a>
+          <a class="nav-link" target="_new" href="https://github.com/rdap-org">GitHub</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="mailto:feedback@rdap.org">Feedback</a>
