add support link

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -93,13 +93,16 @@
           <a class="nav-link" href="https://validator.rdap.org">Validator</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" target="_new" href="https://github.com/rdap-org">GitHub</a>
+          <a class="nav-link" target="_blank" href="https://github.com/rdap-org">GitHub</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="mailto:feedback@rdap.org">Feedback</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" target="_new" href="https://updown.io/p/ephf0">Status</a>
+          <a class="nav-link" target="_blank" href="https://updown.io/p/ephf0">Status</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" target="_blank" href="https://ko-fi.com/rdaporg">Support</a>
         </li>
       </ul>
     </div>
